--- a/client/styles/global.scss
+++ b/client/styles/global.scss
@@ -1,5 +1,23 @@
-.main{
-  background-color: #1E1E1E;
+@font-face {
+  font-family: 'Roboto';
+  src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+}
+
+$sidebar-background: #212121;
+$clickable-paragraphs: #ffffff;
+$header-font-size: 24px;
+$font-fam: 'Roboto';
+
+
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   color: white;
+  
+}
+
+.main{
+  background-color: #191919;
   max-height: 100vh;
 }
