--- a/client/styles/global.scss
+++ b/client/styles/global.scss
@@ -1,23 +1,20 @@
 @font-face {
-  font-family: 'Roboto';
-  src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+  font-family: "Roboto";
+  src: url("https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap");
 }
 
 $sidebar-background: #212121;
 $clickable-paragraphs: #ffffff;
 $header-font-size: 24px;
-$font-fam: 'Roboto';
+$font-fam: "Roboto";
 
-
-*{
+* {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
   color: white;
-  
 }
 
-.main{
+.main {
   background-color: #191919;
   max-height: 100vh;
 }
