--- a/client/styles/nav.scss
+++ b/client/styles/nav.scss
@@ -10,6 +10,7 @@ nav {
   border-radius: 0 40px 40px 0;
   margin-right: 15px;
   text-align: center;
+  font-family: "Roboto", sans-serif;
   h1 {
     color: #3dd2cc;
     margin: 20px 80px;
