add button to load next set of movies in array

--- a/client/styles/global.scss
+++ b/client/styles/global.scss
@@ -11,10 +11,12 @@ $font-fam: "Roboto";
 * {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
   color: white;
 }
 
 .main {
   background-color: #191919;
   max-height: 100vh;
+  display: flex;
 }
