--- a/client/styles/Dashboard.scss
+++ b/client/styles/Dashboard.scss
@@ -2,7 +2,6 @@
 
 
 .dashboard-container {
-  border: 1px solid red;
   height: 100vh;
   width: 75vw;
   display: flex;
@@ -24,6 +23,19 @@ input {
   }
 }
 
+.trending--arrow{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  .arrow-left, .arrow-right {
+    &:hover{
+      cursor: pointer;
+    }
+  }
+   
+}
+
+
 .main_img {
   width: 80%;
   height: 400px;
@@ -34,9 +46,6 @@ input {
   width: 80%;
 }
 
-.home{
-  display: flex;
-}
 
 .img{
   width: 100px;
