--- a/client/styles/Dashboard.scss
+++ b/client/styles/Dashboard.scss
@@ -25,7 +25,7 @@ input {
 
 .trending--arrow{
   display: flex;
-  justify-content: space-between;
+
   margin-top: 10px;
   .arrow-left, .arrow-right {
     &:hover{
@@ -50,6 +50,7 @@ input {
 .img{
   width: 100px;
   height: auto;
+  margin-right: 10px;
 }
 
 .img_div{
