--- a/client/styles/nav.scss
+++ b/client/styles/nav.scss
@@ -1,9 +1,6 @@
 @import "../styles/global.scss";
 
 nav {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
   height: 100vh;
   width: 170px;
   background-color: $sidebar-background;
@@ -18,14 +15,16 @@ nav {
 }
 
 .nav--items {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  width: 100%;
+  text-align: start;
+  ul{
+    list-style: none;
+    width: 100%;
+  }
 }
 
 .link {
   display: flex;
-  justify-content: center;
   text-decoration: none;
   color: $clickable-paragraphs;
   font-size: 16px;
@@ -46,6 +45,10 @@ nav {
   }
 }
 
+.nav--category{
+  display: flex;
+  margin-left: 40px;
+}
 .icon {
   margin-right: 5px;
 }
